; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/ui/browsers/extr_annotate.c_annotate_browser__continue_search_reverse.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/ui/browsers/extr_annotate.c_annotate_browser__continue_search_reverse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.annotate_browser = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.annotate_browser*, i32)* @annotate_browser__continue_search_reverse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @annotate_browser__continue_search_reverse(%struct.annotate_browser* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.annotate_browser*, align 8
  %5 = alloca i32, align 4
  store %struct.annotate_browser* %0, %struct.annotate_browser** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.annotate_browser*, %struct.annotate_browser** %4, align 8
  %7 = getelementptr inbounds %struct.annotate_browser, %struct.annotate_browser* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %2
  %12 = load %struct.annotate_browser*, %struct.annotate_browser** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @annotate_browser__search_reverse(%struct.annotate_browser* %12, i32 %13)
  store i32 %14, i32* %3, align 4
  br label %18

15:                                               ; preds = %2
  %16 = load %struct.annotate_browser*, %struct.annotate_browser** %4, align 8
  %17 = call i32 @__annotate_browser__search_reverse(%struct.annotate_browser* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %15, %11
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @annotate_browser__search_reverse(%struct.annotate_browser*, i32) #1

declare dso_local i32 @__annotate_browser__search_reverse(%struct.annotate_browser*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
